ignore a file and update the others

--- a/template.html
+++ b/template.html
@@ -658,6 +658,11 @@ library(&#39;haven&#39;)</code></pre>
 <h2>Data export</h2>
 <pre class="r"><code>write_csv(intr_words_df,file = &quot;results/intr_words_df.csv&quot;)</code></pre>
 </div>
+<div id="why-not-base-r" class="section level2">
+<h2>why not base r???</h2>
+<pre class="r"><code>#dont use read.csv, instead use read_csv
+dont_do_this_df = read.csv(&quot;data/FAS_litters.csv&quot;)</code></pre>
+</div>
 
 
 
